<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/color_picker_background_layout"
    android:background="#CC000000"
    tools:context=".ColorPickerPopup">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/lightGrey"
        android:orientation="vertical">
        <com.rarepebble.colorpicker.ColorPickerView
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_gravity="center"
            android:id="@+id/color_picker_view"
            app:colorpicker_showAlpha="true"
            app:colorpicker_showHex="true"
            app:colorpicker_showPreview="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_editor_brightness"
            android:textColor="@color/darkGrey"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="#000000"
            android:progressTint="#000000"
            android:progress="95"/>

        <LinearLayout
            android:id="@+id/color_gradient_picker_gradient"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/color_editor_hex_label"
                android:textColor="@color/darkGrey"
                android:textSize="24sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp">
            </TextView>
            <EditText
                android:id="@+id/color_gradient_picker_color_edit"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="10"
                tools:text="#0000FF"
                android:textColor="@color/darkGrey"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:importantForAutofill="no"
                android:importantForAccessibility="no"
                android:inputType="textCapWords"
                tools:ignore="LabelFor">
            </EditText>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/color_gradient_picker_save_color_button"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:background="@drawable/confirmbutton"
                android:text="@string/color_editor_save_color"
                android:textColor="@color/white">
            </Button>
        </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <Button
                android:id="@+id/color_gradient_picker_colors_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/confirmbutton"
                android:text="@string/color_editor_colors"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/color_gradient_picker_confirm_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/confirmbutton"
                android:text="@string/popup_tool_options_confirm_button"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>